Bug 150247 - XML files are not imported when placed in a directory path containing Japanese
Summary: XML files are not imported when placed in a directory path containing Japanese
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.8.1 release
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.1 target:26.2.0
Keywords:
: 146221 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-03 11:19 UTC by mail577043
Modified: 2025-07-12 17:29 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mail577043 2022-08-03 11:19:39 UTC
Description:
OK: "D:\TMP\libre\a\p19.xml"
NG: "D:\TMP\libre\あ\p19.xml"

Steps to Reproduce:
1.Start Calc
2.Select "XML source" menu
3.Select XML file
4.Select cell
5.Push Import button

Actual Results:
import is not done.

Expected Results:
import is done.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.7.2 (x64)
Comment 1 Julien Nabet 2022-08-03 11:30:34 UTC
Could you give a try with LO 7.3.5 ?
Comment 2 Mike Kaganski 2022-08-03 12:21:37 UTC
Repro using Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 66cc8eb6cb5f20251df4e925477653a12ef27297
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 3 Mike Kaganski 2022-08-03 12:35:28 UTC
Code pointer: ScOrcusXMLContextImpl::importXML.

See also: https://gerrit.libreoffice.org/c/core/+/108483
and https://gitlab.com/orcus/orcus/-/issues/30

Kohei: do you have an idea how to fix this, other than that GetShortPathNameW workaround? Note that it would fail in many cases, including increasingly growing number of disabled short names, as well as UNC paths.
Comment 4 Commit Notification 2022-08-04 04:32:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c2e86396b741b956efc05e9dfea1e1c3286dfb9d

tdf#150247: patch orcus to use UTF-16 paths on Windows

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-08-19 15:48:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/3984aa54e43ce2cf342937b9afedbf1d5e79592c

tdf#150247: patch orcus to use UTF-16 paths on Windows

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Kevin Suo 2022-08-19 16:53:17 UTC
dongshili: could you please take a look at this - does the issue we have discussed in bug 114093 is the same as discussed here, i.e. the xml import fails if the file path contains Chinese characters but success if the file path is flat ascii characters (e.g. put in the root of the C or D drive)?
Comment 7 Kevin Suo 2022-08-25 13:26:23 UTC
*** Bug 146221 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2025-07-12 04:38:39 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f1ad49f9989f163c7c103df3f0513f6608801858

tdf#150247: Copy the content to temp file and use its path

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2025-07-12 17:29:57 UTC
(In reply to Commit Notification from comment #8)
> Kohei Yoshida committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> f1ad49f9989f163c7c103df3f0513f6608801858
> 
> tdf#150247: Copy the content to temp file and use its path
> 
> It will be available in 26.2.0.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Please ignore this one. The change has nothing to do with the original bug.