tdf#150247: patch orcus to use UTF-16 paths on Windows

This adds UTF8->UTF16 conversion of the paths passed to ctor of
file_content on Windows, since both boost::filesystem::file_size
and boost::interprocess::file_mapping take UTF-16 strings on this
platform. So the assumption is that 8-bit path strings passed to
orcus are UTF-8-encoded.

This partially reverts commit 75252e58d9b5d020bf7bd6ca66b3a9d780463051
(it keeps use of osl_getThreadTextEncoding for platforms other than
Windows).

Change-Id: Ie467f71a65945f4f07ff432136ea06b811c3f794
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137759
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit c2e86396b741b956efc05e9dfea1e1c3286dfb9d)